k8s/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: review-deployment
  namespace: review-application
spec:
  replicas: 2
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: review-app
          image: brunokarpo/review-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: 100m
