k8s/app/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: review-ingress-service
  namespace: review-application
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: review-application-cluster-ip
              servicePort: 8080
